paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
      - name: paperless
        image: ghcr.io/paperless-ngx/paperless-ngx:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "2"
            memory: "2Gi"
            ephemeral-storage: "4Gi"
        volumeMounts:
        - mountPath: /usr/src/paperless/data
          name: data
        - mountPath: /usr/src/paperless/media
          name: media
        - mountPath: /usr/src/paperless/consume
          name: consume
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-data
      - name: media
        persistentVolumeClaim:
          claimName: paperless-media
      - name: consume
        persistentVolumeClaim:
          claimName: paperless-consume
