paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
