paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
spec:
  ingressClassName: traefik
  rules:
  - host: paperless.yashbhangale.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless
            port:
              number: 8000
